--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "```bash\r /Website Name\r     /src\r         /app\r             /controllers\r             /models\r             /views\r         /config\r         /public\r             /css\r             /js\r             /images\r         /utilities\r     /vendor\r     .htaccess\r     index.php",
   "main": "src\\public\\js\\index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-dev": "npx tailwindcss -i ./src/public/css/input.css -o ./src/public/css/output.css --watch",
+    "build" : "npx tailwindcss -o ./src/public/css/output.css --minify"
   },
   "repository": {
     "type": "git",
